src/tests/inserts/snapshots/ciboulette2pg__tests__inserts__include_multi_and_sort_insert_query.snap
---
source: src/tests/inserts/mod.rs
expression: "sqlformat::format(query.as_str(), &sqlformat::QueryParams::None,\n                  sqlformat::FormatOptions::default())"

---
WITH "cte_peoples_insert_0" AS (
  INSERT INTO
    "public"."peoples" (
      "age",
      "first-name",
      "gender",
      "last-name",
      "twitter"
    )
  VALUES
    ($1, $2, $3, $4, $5) RETURNING *
),
"cte_peoples_data_1" AS (
  SELECT
    "cte_peoples_insert_0"."id" :: TEXT AS "id",
    "cte_peoples_insert_0"."id" AS "main_id",
    NULL :: TEXT AS "related_id",
    NULL :: TEXT AS "related_type",
    $6 :: TEXT AS "type",
    JSON_BUILD_OBJECT(
      $7,
      "cte_peoples_insert_0"."age",
      $8,
      "cte_peoples_insert_0"."first-name",
      $9,
      "cte_peoples_insert_0"."gender",
      $10,
      "cte_peoples_insert_0"."last-name",
      $11,
      "cte_peoples_insert_0"."twitter"
    ) AS "data",
    "cte_peoples_insert_0"."favorite_color" AS "rel_favorite_color",
    "cte_peoples_insert_0"."first-name" AS "sort_first-name"
  FROM
    "cte_peoples_insert_0"
),
"cte_rel_articles_data_2" AS (
  SELECT
    "public"."articles"."id" :: TEXT AS "id",
    "public"."articles"."id" AS "main_id",
    "cte_peoples_data_1"."id" :: TEXT AS "related_id",
    $12 :: TEXT AS "related_type",
    $13 :: TEXT AS "type",
    JSON_BUILD_OBJECT(
      $14,
      "public"."articles"."body",
      $15,
      "public"."articles"."title"
    ) AS "data"
  FROM
    "public"."articles"
    INNER JOIN "public"."people-article" ON "public"."people-article"."article_id" = "public"."articles"."id"
    INNER JOIN "cte_peoples_data_1" ON "cte_peoples_data_1"."main_id" = "public"."people-article"."people_id"
),
"cte_final_main_data" AS (
  SELECT
    DISTINCT ON ("cte_peoples_data_1"."main_id") "cte_peoples_data_1".*,
    "cte_peoples_data_1"."sort_first-name" AS "sort__first-name"
  FROM
    "cte_peoples_data_1"
  ORDER BY
    "cte_peoples_data_1"."main_id"
) (
  SELECT
    "cte_final_main_data"."id",
    "cte_final_main_data"."type",
    "cte_final_main_data"."data",
    "cte_final_main_data"."related_type",
    "cte_final_main_data"."related_id"
  FROM
    "cte_final_main_data"
  ORDER BY
    "cte_final_main_data"."sort__first-name" ASC
)
UNION
ALL (
  SELECT
    "cte_rel_articles_data_2"."id",
    "cte_rel_articles_data_2"."type",
    "cte_rel_articles_data_2"."data",
    "cte_rel_articles_data_2"."related_type",
    "cte_rel_articles_data_2"."related_id"
  FROM
    "cte_rel_articles_data_2"
);
